--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
             </div>
         </div>
     </div>
+    <div class="actions">
+        <button data-speed="slow">慢速</button>
+        <button data-speed="normal" class="active">正常</button>
+        <button data-speed="fast">快速</button>
+    </div>
+    <script src="jquery.min.js"></script>
     <script src="js/main.js"></script>
+    
 </body>
 
 </html>
